@@ -19,6 +19,17 @@
  * Boston, MA 02111-1307, USA.
  */
 
+/**
+ * SECTION:gssdp-resource-browser
+ * @short_description: Class handling resource discovery.
+ *
+ * #GUPnPResourceBrowser handles resource discovery. After creating a browser
+ * and activating it, the ::resource-available and ::resource-unavailable
+ * signals will be emitted whenever the availability of a resource matching the
+ * specified discovery target changes. A discovery request is sent out
+ * automatically when activating the browser.
+ */
+
 #ifndef _XOPEN_SOURCE
 #define _XOPEN_SOURCE
 #endif
